--- a/frontend/youtube-clone-ui/src/app/toolbar/toolbar.component.html
+++ b/frontend/youtube-clone-ui/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar >
-  <mat-icon color="warn">play_circle_filled</mat-icon>
+<mat-toolbar color="primary">
+  <mat-icon >play_circle_filled</mat-icon>
   <span>YouClone</span>
   <span class="toolbar-spacer"></span>
   <button mat-icon-button class="add-video-icon" aria-label="Add video button">
