--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.css
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.css
@@ -5,5 +5,20 @@
 }
 mat-card {
   width: 60%;
-  height: 60%;
 }
+.thumbnailPreviewGrid{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.thumbnailPreloaded{
+  width: auto;
+  height: 250px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+
+
