--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -52,7 +52,7 @@
               </div>
               <br>
               <div>
-                <button type="submit" (click)="uploadThumbnail()" mat-raised-button color="accent">Upload</button>
+                <button type="button" *ngIf="URL" (click)="uploadThumbnail()" mat-raised-button color="accent">Upload</button>
               </div>
             </div>
           </div>
