--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -1,7 +1,7 @@
-<mat-grid-list [cols]=2 rowHeight="400px">
+<mat-grid-list [cols]=2 rowHeight="450">
+  <!-- VIDEO DETAILS FORM -->
   <mat-grid-tile  rowspan="2" colspan="1">
     <mat-card>
-
       <mat-card-header>
         <mat-card-title>Video information</mat-card-title>
         <mat-card-subtitle>Fill all the information</mat-card-subtitle>
@@ -58,17 +58,23 @@
           </div>
           <br>
           <mat-divider></mat-divider>
-          <button style="margin-top: 10px" type="submit" mat-raised-button color="primary">Save</button>
+          <button style="margin-top: 10px" type="submit" mat-raised-button color="primary" (click)="saveVideo()">Save</button>
         </form>
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
+  <!-- VIDEO PLAYER -->
   <mat-grid-tile  rowspan="1" colspan="1">
-    VIDEO PLAYER
+    <div style=" padding-left: 20px; margin-top: 100px; width:100%;">
+      <h2>Video preview</h2>
+      <app-video-player [videoUrl] = "videoUrl" class="videoPlayer"></app-video-player>
+    </div>
+
   </mat-grid-tile>
+  <!-- THUMBNAIL PREVIEW -->
   <mat-grid-tile >
     <div style=" padding-left: 20px; margin-bottom: 100px; width:100%;" class="thumbnailPreviewGrid">
-      <h1>Thumbnail preview</h1>
+      <h2>Thumbnail preview</h2>
       <img class="thumbnailPreloaded" *ngIf="URL" [src]="URL" height="50%" width="50%" alt="Thumbnail uploaded for this video">
     </div>
   </mat-grid-tile>
